Improve container naming and add startup scripts
- Fixed docker-compose.yml to use explicit image name 'sira-api:latest'
- Removed confusing 'docker-sira-api' auto-generated image name
- Added start-sira.bat for easy Windows startup
- Added stop-sira.bat for easy Windows shutdown
- Added QUICKSTART.md with clear instructions
- All containers properly named with 'sira-' prefix:
  * sira-api-dev (API service)
  * sira-postgres (database)
  * sira-chromadb (vector DB)
  * sira-llm (Ollama)

--- a/ops/docker/docker-compose.yml
+++ b/ops/docker/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     build:
       context: ../..
       dockerfile: ops/docker/Dockerfile
+    image: sira-api:latest
     container_name: sira-api-dev
     ports:
       - "8080:8080"
