Sprint 3 completion - Documentation and release notes

--- a/ops/docker/docker-compose.yml
+++ b/ops/docker/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - "8080:8080"
     volumes:
       - ../../src:/app/src
-      - sira_data:/data
+      - ../../data:/app/data
     environment:
       - ENV=development
       - POSTGRES_HOST=sira-postgres
